# dg-sqltrace

./: README.md  manage.py  requirements.txt
dgsqltrace/: asgi.py  settings.py  urls.py  wsgi.py
sql-package/: LICENSE  pyproject.toml
sqlquery/: factory.py  middleware.py  models.py  views.py
sqlquery/migrations/: 0001_initial.py
